--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.87.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "sass": "^1.89.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
